Fixed wrapping issues for long lines in notes

--- a/Frontend/src/pages/recipe/recipe.scss
+++ b/Frontend/src/pages/recipe/recipe.scss
@@ -1,6 +1,6 @@
 page-recipe {
   .pre {
-    white-space: pre;
+    white-space: pre-wrap;
   }
 
   .ingredientsInstructionsGrid {
